src/trusted/validator_arm/testdata/bad/invalid_indirect_branch_cond.dis
       0:	03c552ff 	(eq)	bic	r5, r5, #-268435441
       4:	e12fff15 		bx	r5
